welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:9: error: ';' expected but integer literal found.
		rutun 000000000000
                      ^